# mikrotik-traffic-analyzer

./: Cargo.toml  Dockerfile
migrations/2025xxxxxx_initial_setup/: up.sql
src/: database.rs  main.rs  migration.rs  models.rs  schema.rs  websocket.rs
src/database/: db.sqlite
