[package]
name = "mikrotik-traffic-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
mikrotik_api = "0.3.0"
tokio = { version = "1.21", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.11", features = ["sqlite"] }
diesel_migrations = "2.0"