[package]
name = "mikrotik-traffic-analyzer"
version = "1.0.0"
edition = "2021"

[dependencies]
mikrotik_api = "0.3.0"
tokio = { version = "1.21", features = ["full"] }
tokio-tungstenite = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
diesel = { version = "2.2.11", features = ["sqlite"] }
diesel_migrations = "2.0"
futures-util = "0.3.31"
serde_json = "1.0.140"
tungstenite = "0.18.0"